<resources>
    <string name="app_name">车马部落</string>

    <string name="tv_header_addcar">车辆信息</string>
    <string name="tv_header_change_car">更换车辆</string>
    <string name="tv_header_add_newcar">新增车辆</string>
    <string name="tv_header_shop">商家</string>

    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_finish">完成</string>
    <string name="tv_login_code">快速登录</string>
    <string name="btn_getcode">获取验证码</string>
    <string name="tv_save">保存</string>

    <string name="tv_homepage_bottom_index">首页</string>
    <string name="tv_homepage_bottom_service">服务</string>
    <string name="tv_homepage_bottom_order">订单</string>
    <string name="tv_homepage_bottom_my">我的</string>
    <string name="tv_homeapge_search">请输入商家/位置</string>
    
    <string name="tv_homepage_appointment">预约保养</string>
    <string name="tv_homepage_family">府上养车</string>
    <string name="tv_homepage_drive">预约试驾</string>
    <string name="tv_homepage_buy">新手购车</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_order_date">订单时间：2015-07-14</string>
    <string name="tv_meet_time">接驾时间：2015-07-15</string>
    <string name="tv_meet_address">接驾地址：文一西路960号</string>
    <string name="tv_meet_earmest">￥500</string>
    <string name="tv_reference_price">参考价格：￥750</string>

    <string name="tv_my_person">账户信息</string>
    <string name="tv_my_car">我的车辆</string>
    <string name="tv_my_coupon">代金券</string>
    <string name="tv_my_momey">账户余额</string>
    <string name="tv_my_invitation">邀请好友</string>
    <string name="tv_my_collect">我的收藏</string>
    <string name="tv_my_feedback">意见建议</string>
    <string name="tv_my_phone">客服电话 400-123-1234</string>
    <string name="tv_my_about">关于车马部落</string>

    <string name="tv_car_type">品牌车系</string>
    <string name="tv_car_model">车型</string>
    <string name="tv_car_number">车牌号码</string>
    <string name="tv_car_from">浙A</string>
    <string name="tv_car_distance">行驶里程</string>
    <string name="tv_car_distance_unit">km</string>
</resources>
