<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_order_date"/>

        <TextView
            android:id="@+id/tv_order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_alignParentRight="true"
            android:text="正在保养"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_company"
            android:text="4S店名称"/>

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_launcher"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_order_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="上门保养"/>

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_meet_time"/>

            <TextView
                android:id="@+id/tv_meet_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_meet_address"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_order_earnest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_meet_earmest"
            android:textColor="@color/red"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_reference_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_reference_price"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

            <Button
                android:id="@+id/btn_order_right_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="完成保养"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_order_right_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="完成保养"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

</LinearLayout>