<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header_style_search"
        layout="@layout/view_main_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/rl_appointment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_homepage_appointment"
                android:textSize="@dimen/dimen_homepage_bodyer_text"
                android:textColor="@color/color_index_text"
                android:drawableTop="@mipmap/icon_appointment"
                android:drawablePadding="@dimen/dimen_homepage_text_padding"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_drive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_homepage_drive"
                android:textSize="@dimen/dimen_homepage_bodyer_text"
                android:textColor="@color/color_index_text"
                android:drawableTop="@mipmap/icon_drive"
                android:drawablePadding="@dimen/dimen_homepage_text_padding"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_order_line" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_buy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_homepage_buy"
                android:textSize="@dimen/dimen_homepage_bodyer_text"
                android:textColor="@color/color_index_text"
                android:drawableTop="@mipmap/icon_buy"
                android:drawablePadding="@dimen/dimen_homepage_text_padding"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_order_line" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp" >

        <com.witalk.widget.FoucesViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/layout_vp_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:paddingBottom="5dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="附近商家"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/color_index_near_shop" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="更多"
            android:textSize="13sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:textColor="@color/color_index_more"
            android:paddingRight="15dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_order_line" />

</LinearLayout>